# AI-test-project

./: .gitignore  CMakeLists.txt  cURL.cpp  test.cpp  test.py  test2.cpp  test3.cpp  testSORT.cpp  video.cpp
include/lite/: config.h  models.h
include/lite/ort/core/: ort_config.h  ort_defs.h  ort_handler.h
include/lite/ort/cv/: scrfd.h
lib/: libavdevice.so.58.8.100  libavfilter.so.7.57.100  libavformat.so.58.29.100  libavutil.so.56.31.100  liblite.ai.toolkit.so.0.1.1  libopencv_calib3d.so.4.5.2  libopencv_imgcodecs.so.4.5.2  libopencv_objdetect.so.4.5.2  libopencv_photo.so.4.5.2  libopencv_video.so.4.5.2  libswscale.so.5.5.100
model/: MobileFaceNet_Pytorch_068.onnx
